--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,27 @@
-node_modules
-.venv
-dist
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Python
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
 __pycache__
 .ipynb_checkpoints
-
-src/ipyreactflow/static
