--- a/package.json
+++ b/package.json
@@ -1,15 +1,29 @@
 {
-	"scripts": {
-		"dev": "npm run build -- --sourcemap=inline --watch",
-		"build": "esbuild js/widget.jsx --minify --format=esm --bundle --outdir=src/ipyreactflow/static"
-	},
-	"dependencies": {
-		"@anywidget/react": "^0.0.2",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"reactflow": "^11.9.4"
-	},
-	"devDependencies": {
-		"esbuild": "^0.19.5"
-	}
+  "name": "anywidget-react-vite-test",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "@anywidget/vite": "^0.1.1",
+    "mafs": "^0.17.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "reactflow": "^11.7.4"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "@vitejs/plugin-react": "^4.0.1",
+    "eslint": "^8.44.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.1",
+    "vite": "^4.4.0"
+  }
 }
