update to xyflow

--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
 		"build": "esbuild js/widget.jsx --minify --format=esm --bundle --outdir=src/ipyreactflow/static"
 	},
 	"dependencies": {
-		"@anywidget/react": "^0.0.2",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"reactflow": "^11.9.4"
+		"@anywidget/react": "^0.0.8",
+		"@xyflow/react": "^12.3.0",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1"
 	},
 	"devDependencies": {
-		"esbuild": "^0.19.5"
+		"esbuild": "^0.23.1"
 	}
 }
